# mono-tn3270

./: .gitignore  Makefile.in  README.md  autogen.sh  configure.ac  gitsync.sh  pw3270-sharp.cbp  pw3270-sharp.spec  winpacket.sh
debian/: changelog  control  lib3270-mono-bindings.dsc  pw3270-sharp.dsc  rules
rpm/: _service  lib3270-mono-bindings.spec  mono-tn3270.spec  pw3270-sharp.spec
src/core/: Makefile.in  mono-tn3270.pc.in  tn3270-sharp.cs  tn3270-sharp.pc.in  tn3270.cs
src/include/: config.h.in  native.h
src/native/: Makefile.in  actions.cc  get.cc  init.cc  native.cbp  network.cc  private.h  screen.cc  set.cc
src/native/core/: actions.cc  get.cc  init.cc  network.cc  screen.cc  set.cc  tools.cc
src/native/testprogram/: testprogram.cc
src/native/windows/: resources.rc.in
src/pw3270-sharp/: Makefile.in  pw3270-sharp.cs  pw3270-sharp.pc.in
src/testprograms/: ipc.cs  sample.cs  simple.cs  vbclass.vb  vbsample.vb  vbtest.vb
src/tn3270-sharp/: Makefile.in  tn3270-sharp.cs
testprograms/: ipc.cs  sample.cs  vbclass.vb  vbsample.vb  vbtest.vb
win/: install-cross.sh  pack-with-trace.sh  pack.sh
win/x86_32/: mingw32-mono-tn3270.spec
win/x86_64/: mingw64-mono-tn3270.spec
